fixed alignment on rps main page. changed font

--- a/rpsPvpStyle.css
+++ b/rpsPvpStyle.css
@@ -4,23 +4,23 @@ body {
 
 /* Players names and Scores Style */
 .player1 {
-    margin-right: 15%;
+    margin-right: 10%;
     color: black;
-    font-size: 45px;
+    font-size: 40px;
     font-weight: bold;
-    font-family: cursive;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .player2 {
-    margin-left: 15%;
+    margin-left: 20%;
     color: white;
-    font-size: 45px;
+    font-size: 40px;
     font-weight: bold;
-    font-family: cursive;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .pvpVs {
-    font-size: 45px;
+    font-size: 35px;
     font-weight: bold;
-    font-family: cursive;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 /* PVP players display style */
@@ -30,7 +30,7 @@ body {
     width: 93%;
     height: 400px;
     border: 5px solid black;
-    padding: 25px;
+    padding: 15px;
     margin: 10px;
 }
 
